@@ -1,0 +1,4 @@
+usr/lib/*/libcogl-gst.so
+usr/lib/*/pkgconfig/cogl-gst*
+usr/include/cogl/cogl-gst/
+usr/share/gir-1.0/CoglGst-*
