@@ -1,0 +1,19 @@
+libcogl-gst.so.20 libcogl-gst #MINVER#
+ cogl_gst_rectangle_get_gtype@Base 1.20.0
+ cogl_gst_video_sink_attach_frame@Base 1.20.0
+ cogl_gst_video_sink_fit_size@Base 1.20.0
+ cogl_gst_video_sink_get_aspect@Base 1.20.0
+ cogl_gst_video_sink_get_free_layer@Base 1.20.0
+ cogl_gst_video_sink_get_height_for_width@Base 1.20.0
+ cogl_gst_video_sink_get_natural_height@Base 1.20.0
+ cogl_gst_video_sink_get_natural_size@Base 1.20.0
+ cogl_gst_video_sink_get_natural_width@Base 1.20.0
+ cogl_gst_video_sink_get_pipeline@Base 1.20.0
+ cogl_gst_video_sink_get_type@Base 1.20.0
+ cogl_gst_video_sink_get_width_for_height@Base 1.20.0
+ cogl_gst_video_sink_is_ready@Base 1.20.0
+ cogl_gst_video_sink_new@Base 1.20.0
+ cogl_gst_video_sink_set_context@Base 1.20.0
+ cogl_gst_video_sink_set_default_sample@Base 1.20.0
+ cogl_gst_video_sink_set_first_layer@Base 1.20.0
+ cogl_gst_video_sink_setup_pipeline@Base 1.20.0
